# darwin-cctools

./: Makefile.am  Makefile.in  aclocal.m4  cctools-fix.sh  config.h.in  configure  configure.ac
cctools/RelNotes/: Private_CompilerTools.html
cctools/ar/: ar.c  archive.c  contents.c  misc.c
cctools/as/: as.h  bignum.h  dwarf2dbg.c  expr.c  input-file.c  input-scrub.c  layout.c  messages.c  read.c  relax.h  write_object.c
cctools/gprof/: gprof.h
cctools/include/: notes
cctools/include/llvm-c/: Disassembler.h
cctools/include/mach/: machine.h
cctools/include/stuff/: breakout.h  errors.h  ofile.h
cctools/ld/: layout.c
cctools/libmacho/: hppa_swap.c  i386_swap.c  i860_swap.c  m68k_swap.c  m88k_swap.c  ppc_swap.c  sparc_swap.c
cctools/libstuff/: errors.c  execute.c  llvm.c  lto.c  notes  ofile.c  symbol_list.c
cctools/misc/: cmpdylib.c  libtool.c  pagestuff.c  redo_prebinding.c  segedit.c  size.c  strings.c  strip.c
cctools/otool/: arm_disasm.h  i386_disasm.c  i386_disasm.h  main.c  ofile_print.c  ofile_print.h  otool.h  print_objc2_64bit.c
emu/: host.c  log.c  log.h  mach.c  ns.c  qsort.c  strlcc.c  strmode.c  version.c  vm.c
emu/include/: Availability.h  ar.h  dlfcn.h  errno.h  fcntl.h  libc.h  string.h  strings.h  tzfile.h
emu/include/CommonCrypto/: CommonDigest.h
emu/include/i386/: _types.h
emu/include/libkern/: OSByteOrder.h  _OSByteOrder.h
emu/include/libunwind/: AddressSpace.hpp  DwarfParser.hpp
emu/include/mach/: boolean.h  error.h  host_info.h  host_priv.h  kern_return.h  mach.h  mach_error.h  mach_host.h  mach_init.h  mach_interface.h  mach_port.h  mach_traps.h  mach_types.h  machine.h  message.h  port.h  vm_map.h  vm_prot.h  vm_statistics.h  vm_types.h
emu/include/mach-o/: dyld_images.h
emu/include/mach/i386/: thread_status.h
emu/include/mach/machine/: boolean.h  kern_return.h  thread_status.h  vm_types.h
emu/include/mach/x86_64/: task.h
emu/include/objc/: objc-runtime.h
ld64/src/ld/: InputFiles.cpp  LinkEdit.hpp  Options.cpp  Options.h  OutputFile.cpp  Resolver.cpp  SymbolTable.cpp  debugline.c  ld.cpp  ld.hpp
ld64/src/ld/parsers/: archive_file.cpp  lto_file_stub.cpp  macho_relocatable_file.cpp
ld64/src/ld/parsers/libunwind/: AddressSpace.hpp  DwarfParser.hpp
ld64/src/ld/passes/: branch_island.cpp  compact_unwind.cpp  dtrace_dof.cpp  huge.cpp
